@@ -327,6 +327,7 @@ void                 _elm_widget_top_win_focused_set(Evas_Object *obj,
                                                      Eina_Bool top_win_focused);
 Eina_Bool            _elm_widget_top_win_focused_get(const Evas_Object *obj);
 
+void                 _elm_unneed_sys_notify(void);
 void                 _elm_unneed_ethumb(void);
 void                 _elm_unneed_web(void);
 
